	loaded by the example.

    o	tools::codoc() (and hence R CMD check) now checks any documentation
	for registered S3 methods and unexported objects in packages
	with namespaces.


DOCUMENTATION

    o	The reference manual now omits 'internal' help pages.

    o	There is a new help page shown by help("Memory-limits") which
	documents the current design limitations on large objects.


C-LEVEL FACILITIES

    o	The PACKAGE argument for .C/.Call/.Fortran/.External can be
	omitted if the call is within code within a package with a
	namespace.  This ensures that the native routine being called
	is found in the DLL of the correct version of the package if
	multiple versions of a package are loaded in the R session.
	Using a namespace and omitting the PACKAGE argument is
	currently the only way to ensure that the correct version is
	used.

    o	The header Rmath.h contains a definition for R_VERSION_STRING
	which can be used to track different versions of R and libRmath.

    o	The Makefile in src/nmath/standalone now has 'install' and
	'uninstall' targets -- see the README file in that directory.

    o	More of the header files, including Rinternals.h, Rdefines.h and
	Rversion.h, are now suitable for calling directly from C++.


DEPRECATED & DEFUNCT

    o	Direct use of R INSTALL|REMOVE|BATCH|COMPILE|SHLIB has been
	removed: use R CMD instead.

    o	La.eigen(), tetragamma(), pentagamma(), package.contents() and
	package.description() are defunct.

    o	The undocumented function newestVersion() is no longer exported
	from package utils.  (Mainly because it was not completely general.)

    o	If --enable-R-shlib is specified, a copy of libR is still
	installed in $R_HOME/bin, but this will be removed in the near
	future.	 Use that in R_HOME/lib instead.

    o	C-level entry point ptr_R_GetX11Image has been removed, as it
	was replaced by R_GetX11Image at 1.7.0.

    o	The undocumented C-level entry point R_IsNaNorNA has been